--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" rel="stylesheet">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/semantic-ui/2.2.4/components/icon.min.css" /> <!-- Icons -->
   <link rel="stylesheet" href="style.css">
-  <title>Jamie Vardy Fairytale Season Tribute</title>
+  <title>Jamie Vardy</title>
 </head>
 
 <body>
